@@ -3,6 +3,7 @@
 /aclocal.m4
 /*.adf
 /amiga/
+/apps/
 /ar-lib
 /autom4te.cache/
 autom4te.cache
