@@ -1,7 +1,8 @@
 Version 3.1.x:
 
+* Support controller_[event] input mapping for matching all controllers.
 * Prefer $HOME/FS-UAE if it exists, otherwise use $DOCUMENTS/FS-UAE.
-* Support joystick_port_[port]_[gamepadinput] input mapping.
+* Support joystick_port_[port]_controller_[event] input mapping.
 * Read [guid].fs-uae-controller controller configs.
 * Fixed uaenative_library option.
 * Added lots of game controller configs.
